deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: como-vapp-dev
  labels:
    app.kubernetes.io/part-of: como-vapp
    environment: dev
